--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
     <meta property="og:url " content="https://grocery-ef007.netlify.app ">
     <meta property="og:title " content="Grocery: For your meal, serve best ">
     <meta property="og:description " content="Grocery is India 's fastest online shopping platform. Get fresh groceries and much more delivered online instantly">
-    <meta property="og:image" content="img/logo.png">
+    <meta property="og:image" content="img/logo.png" href="/img/logo.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://grocery-ef007.netlify.app">
     <meta property="twitter:title" content="Grocery: For your meal, serve best">
     <meta property="twitter:description" content="Grocery is India's fastest online shopping platform. Get fresh groceries and much more delivered online instantly ">
-    <meta property="twitter:image " content="img/logo.png ">
+    <meta property="twitter:image " content="/img/logo.png" href="/img/logo.png">
 
-    <link rel="shortcut icon" href="img/grocery-favicon.png" type="image/x-icon">
-    <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
+    <link rel="shortcut icon" href="/img/grocery-favicon.png" type="image/x-icon">
+    <link rel="apple-touch-icon" href="/img/grocery-favicon.png">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css " rel="stylesheet " integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC " crossorigin="anonymous ">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js " integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM " crossorigin="anonymous "></script>
