--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
         <!-- ----------------------Special Offer---------------------------- -->
         <div class="container-fluid bg-light pt-5 ">
             <div class="container-fluid w-auto mx-5 px-3 ">
-                <div class="special-offer container-fluid d-flex flex-row-reverse position-relative w-100 h-100 mx-5 px-5 ">
+                <div class="special-offer container-fluid d-flex flex-row-reverse position-relative w-auto h-100 mx-5 px-5 ">
                     <div class="special-offer-card position-absolute ">
                         <p class="em m-0 "><em> Special Offer On</em></p>
                         <p class="offer-product text-nowrap overflow-auto m-0 ">Fruits & Vegetables</p>
