--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <meta property="og:url " content="https://grocery-ef007.netlify.app ">
     <meta property="og:title " content="Grocery: For your meal, serve best ">
     <meta property="og:description " content="Grocery is India 's fastest online shopping platform. Get fresh groceries and much more delivered online instantly">
-    <meta property="og:image" content="https://github.com/eaglefree007/Grocery/blob/main/img/logo.png">
+    <meta property="og:image" content="https://i.postimg.cc/8cFNhY4C/logo.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://grocery-ef007.netlify.app">
     <meta property="twitter:title" content="Grocery: For your meal, serve best">
     <meta property="twitter:description" content="Grocery is India's fastest online shopping platform. Get fresh groceries and much more delivered online instantly ">
-    <meta property="twitter:image " content="https://github.com/eaglefree007/Grocery/blob/main/img/logo.png">
+    <meta property="twitter:image " content="https://i.postimg.cc/8cFNhY4C/logo.png">
 
     <link rel="shortcut icon" href="/img/grocery-favicon.png" type="image/x-icon">
     <link rel="apple-touch-icon" href="/img/grocery-favicon.png">
