--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type " content="website ">
-    <meta property="og:url " content="https://eaglefree007.github.io/Grocery/">
+    <meta property="og:url " content="https://grocery-ef007.netlify.app/">
     <meta property="og:title " content="Grocery: For your meal, serve best ">
     <meta property="og:description " content="Grocery is India 's fastest online shopping platform. Get fresh groceries and much more delivered online instantly">
     <meta property="og:image" content="https://i.postimg.cc/8cFNhY4C/logo.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://eaglefree007.github.io/Grocery/">
+    <meta property="twitter:url" content="https://grocery-ef007.netlify.app/">
     <meta property="twitter:title" content="Grocery: For your meal, serve best">
     <meta property="twitter:description" content="Grocery is India's fastest online shopping platform. Get fresh groceries and much more delivered online instantly ">
     <meta property="twitter:image " content="https://i.postimg.cc/8cFNhY4C/logo.png">
