--- a/index.html
+++ b/index.html
@@ -226,10 +226,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="arrow back d-flex justify-content-center align-items-center position-absolute ">
+                <div class="arrow sc-top back d-flex justify-content-center align-items-center position-absolute ">
                     <img src="img/svg/chevron-back-outline.svg " alt=" ">
                 </div>
-                <div class="arrow forward d-flex justify-content-center align-items-center position-absolute ">
+                <div class="arrow sc-top forward d-flex justify-content-center align-items-center position-absolute ">
                     <img src="img/svg/chevron-forward-outline.svg " alt=" ">
                 </div>
             </div>
