--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
         </a>
 
 
-        <div class="navbar-expand-md w-md-auto">
+        <div class="navbar-expand-md">
             <button class="navbar-toggler d-block d-md-none btn" data-bs-toggle="collapse " data-target="my-profile ">
                 <span class="navbar-toggler-icon "></span>
             </button>
-            <div class="navbar-nav d-none d-md-flex flex-column-reverse flex-md-row collapse " data-bs-toggle="collapse " id="my-profile ">
-                <div class="location d-flex flex-nowrap align-items-center justify-content-center ">
+            <div class="navbar-nav d-none d-md-flex flex-column-reverse flex-md-row justify-content-between" data-bs-toggle="collapse " id="my-profile ">
+                <div class="location d-flex flex-nowrap align-items-center justify-content-center mx-auto">
                     <img src="img/header/location-mark.svg " alt=" ">
                     <p class="my-0 mx-1 ">56, Street Road Banglore... </p>
                     <img src="img/svg/Arrow-down.svg " alt=" " class="down-arrow-black-btn ">
@@ -91,7 +91,7 @@
         </div>
 
     </nav>
-    <nav class="navbar navbar-light d-flex justify-content-between justify-content-md-start align-items-center  px-5 mt-5 pt-5">
+    <nav class="navbar navbar-light d-flex nav-2 justify-content-around justify-content-md-start align-items-center  px-5 mt-5 pt-5">
         <div class="d-flex align-items-center store-location border-0 w-auto ">
             <img src="img/header/address-logo.png " alt=" " class="mx-2 ">
             <div class="store-address ">
