--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
 
     </nav>
-    <nav class="navbar navbar-light d-flex nav-2 justify-content-around justify-content-md-start align-items-center  px-5 mt-5 pt-5">
+    <nav class="navbar navbar-light d-flex nav-2 justify-content-between justify-content-md-start align-items-center  px-5 mt-5 pt-5">
         <div class="d-flex align-items-center store-location border-0 w-auto ">
             <img src="img/header/address-logo.png " alt=" " class="mx-2 ">
             <div class="store-address ">
@@ -105,7 +105,7 @@
                 <span class="navbar-toggler-icon "></span>
             </button>
             <ul class="navbar-nav d-none d-md-flex justify-content-md-around collapse" id="items" aria-labelledby="itemsLabel" aria-hidden="true">
-                <li class="nav-items ">
+                <li class="nav-items">
                     <a href=" " class="nav-link align-items-center text-dark ">
                         Vegetables<img src="img/svg/Arrow-down.svg " alt=" " class="down-arrow-black-btn ">
                     </a>
