--- a/index.html
+++ b/index.html
@@ -804,7 +804,7 @@
                 <h4 class="mx-auto ">How Does<span class="green "> Grocery</span> Works?</h4>
             </div>
             <div class="stories container-fluid row row-cols-1 row-cols-md-3 mx-auto justify-content-around position-relative w-auto mb-3 px-2 py-3 ">
-                <div class="col-4 ">
+                <div class="col-9 col-sm-4 ">
                     <div class="card border-0 container d-flex flex-column align-items-center justify-content-center bg-light text-center ">
                         <div class="mx-auto ">
                             <img src="img/how-it-works/search-grocery.png " alt=" " class="card-img-top mx-auto my-5 ">
@@ -813,7 +813,7 @@
                         <p class="data-search ">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
                     </div>
                 </div>
-                <div class="col-4 ">
+                <div class="col-9 col-sm-4 ">
                     <div class="card border-0 container d-flex flex-column align-items-center justify-content-center bg-light text-center ">
                         <div class="mx-auto ">
                             <img src="img/how-it-works/tags-orange.png " alt=" " class="card-img-top mx-auto my-5 ">
@@ -822,7 +822,7 @@
                         <p class="data-search ">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
                     </div>
                 </div>
-                <div class="col-4 ">
+                <div class="col-9 col-sm-4 ">
                     <div class="card border-0 container d-flex flex-column align-items-center justify-content-center bg-light text-center ">
                         <div class="mx-auto ">
                             <img src="img/how-it-works/money-bank.png " alt=" " class="card-img-top mx-auto my-5 ">
